<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱子客</string>
    <string name="wait">请稍等......</string>
    <string name="confirm">确认</string>
    <string name="empty_alert">您未填写完全</string>
    <string name="male_name">男</string>
    <string name="female_name">女</string>
    <string name="activite_msg">请您输入真实的手机号\n若输入虚假号码，可能会被停止使用</string>
    <string name="activite_msg_pswd">请输入初始密码，用于找回账户</string>
    <string name="activite_msg_pswd_hint">20位以内字符或数字</string>
    <string name="phone_num_error">请正确填写手机号</string>
    <string name="activite_btn">激活</string>
    <string name="school_c">学校</string>
    <string name="grade_c">入学年份</string>
    <string name="class_c">班级</string>
    <string name="register">注册</string>
    <string name="register_msg">请正确填写基础信息</string>
    <string name="name">学生姓名</string>
    <string name="sex">学生性别</string>
    <string name="birth">出生日期</string>
    <string name="education">家长学历</string>
    <string name="end_day">截止日期</string>
    <string name="user_infos">账号切换</string>
    <string name="user_infos_msg">点击切换用户信息</string>
    <string name="expiry_date">服务截止日期</string>
    <string name="regist_success_msg">注册成功！</string>
    <string name="adduser_success_msg">添加帐号成功！</string>
    <string name="feedback_title">使用反馈</string>
    <string name="feedback_type">反馈类型</string>
    <string name="feedback_content">反馈内容</string>
    <string name="feedback_confirm">提交反馈</string>
    <string name="feedback_success">提交反馈成功</string>
    <string name="feedback_length_hint">字数在10-500之间</string>
    <string name="feedback_content_too_few">您提交的反馈内容太少了。</string>
    <string name="feedback_content_too_many">您提交的反馈内容太多了。</string>

    <!-- alert msg -->
    <string name="msg_para_type_error">参数类型错误</string><!-- 100  -->
    <string name="msg_loss_para">缺少必须参数</string><!-- 101  -->
    <string name="msg_key_error">激活码无效</string> <!-- 102 -->
    <string name="msg_activate_error">激活失败</string> <!-- 103 -->
    <string name="msg_key_cache">激活码状态异常</string><!-- 104-->
    <string name="msg_key_hasused">激活码已被使用，后台会记录本次提交的设备信息，如用户换设备由业务人员后台处理</string><!-- 105 -->
    <string name="msg_register_error">注册失败</string> <!-- 106 -->
    <string name="msg_error_deviceid">对不起，您的设备不支持此款应用！</string> <!-- 107 -->
    <string name="msg_no_pay">对不起，您还还未缴费。</string> <!-- 108 -->
    <string name="msg_add_account_error">账号添加失败。</string> <!-- 109 -->
    <string name="msg_feedback_error">问题反馈失败。</string> <!-- 110 -->
    <string name="msg_no_authority">设备无权限或已过有效期。</string> <!-- 111 -->
    <string name="msg_accout_full">子账号数量超过限制。</string> <!-- 112 -->
    <string name="msg_notice_has_feedback">已报名 手机端已对此通知报名，不需要再报名</string><!--     113  -->
    <string name="msg_no_user_issue">没有订阅包 此用户未订阅任何扩展包</string><!-- 114  -->
    <string name="msg_phonenum_has_registe">此手机号已被注册，请联系客服处理</string><!-- 115  -->
    <string name="msg_other_phonenum">此设备已使用过其他手机号注册</string><!-- 116  -->
    <string name="msg_user_issue_repeat">此扩展包已订阅，不需再次订阅</string><!-- 117  -->
    <string name="msg_user_forbidden">您已被禁止使用，请联系客服处理</string><!-- status=4  -->
    <string name="msg_user_no_authority">您的服务期限已过，请续费</string><!-- status=5 -->
    <string name="msg_userid_no_authority">该账户的服务期限已过</string><!-- status=5 -->
    
    <string name="msg_without_regist">未注册完成，即将退出。</string>
    
    <string name="recommend">增值推荐</string>
    <string name="expertlist">专栏列表</string>
    <string name="user_issues_list">扩展包</string>

    <!-- settings -->
    <string name="setting">设置</string>
    <string name="account_manager">账号管理</string>
    <string name="account_manager_sub">管理下属账号的服务期限</string>
    <string name="add_account">添加子账号</string>
    <string name="add_account_sub">可以定制多个子女</string>
    <string name="text_size">文章字体大小</string>
    <string name="text_size_sub">当前字体大小为%s号</string>
    <string name="big">大</string>
    <string name="normal">中</string>
    <string name="small">小</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="download_concrol">流量控制</string>
    <string name="download_concrol_sub">仅在wifi下加载图片，节省流量</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="help">帮助说明</string>
    <string name="help_sub">了解程序基本操作功能</string>
    <string name="check_update">检查版本</string>
    <string name="check_update_sub">当前版本%s</string>
    <string name="system">系统参数</string>
    <string name="system_sub">屏幕分辨率%1$sx%2$s DPI=%3$s density=%4$s</string>
    
    <!-- about -->
    <string name="about">关于我们</string>
    <string name="about_sub">AZKER的介绍和联系方式</string>
    <string name="about_title">关于AZKER&#160;&#160;&#160;v%s</string>
    <string name="about_company">\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
      AZKER是由安徽旷达科技发展有限公司开发运营的平台，
      平台内容是由专家团队多年工作、教育、教学、咨询等经验的积累，
      针对不同阶段学生的特点定制化、标准化服务的平台。
      </string>
    <string name="contact_us">联系我们</string>
    <string name="contact_info">官方网站：http://www.azker.com
      \n电子邮箱：jinkun@huadi.com.cn
      \n联系电话：0551-65210156</string>
    <string name="business">商务合作</string>
    <string name="business_tel">联系电话：18956050522</string>
    <string name="privacy">隐私政策</string>
    <string name="announce">免责声明</string>
    
    <!-- upgrade -->
    <string name="upgrade">版本更新</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="download">下载</string>
    <string name="upgrade_now">马上更新</string>
    <string name="upgrade_later">以后再说</string>
    <string name="exit">退出程序</string>
    <string name="upgrade_prompt">检测到新版本：%s</string>
    <string name="upgrade_neccessary">温馨提示：请务必升级您的应用程序，否则将无法继续使用。</string>
    <string name="no_new_version">当前已是最新版本</string>
    <string name="apk_download_ticker_text">正在下载更新</string>
    <string name="apk_downloading">正在下载%s...</string>
    <string name="apk_downloaded">新版本下载完毕</string>
    <string name="apk_download_cancelled">下载已取消</string>
    <string name="apk_download_failed">下载失败</string>
    <string name="apk_install_prompt">新版本下载完毕, 点击安装</string>
    
    <string name="praise">赞！</string>
    <string name="notice_feedback">报名</string>
    <string name="tip">提示</string>
    <string name="tip_message">检测网络中......</string>
    <string name="net_isonline_tip_msg">服务器网络服务异常!</string>
    <string name="phone_isonline_tip_msg">手机未开启网络服务!</string>
    <string name="category_msg">上滑可进入首页</string>
    <string name="exit_msg">再按一次退出Azker</string>
    <string name="default_file_title">课程</string>
    <string name="default_notice_title">我的通知</string>
    <string name="default_daily_reminder_title">持之以恒</string>
    <string name="expert_label">专家：%s</string>
    <string name="news_message_prompt_title">您有新消息</string>
    <string name="msg_prompt_title_notice">通知消息</string>
    <string name="msg_prompt_title_notice_feedback">通知反馈</string>
    <string name="msg_prompt_title_daily_reminder">持之以恒</string>
    <string name="msg_prompt_title_colomnist">推荐专栏</string>
    <string name="msg_prompt_title_recommend">推荐课题</string>

    <!-- empty msg -->
    <string name="cant_add_user_msg">您没有未激活的订制记录</string>
    <string name="empty_notice_list">暂时没有通知</string>
    <string name="empty_recommend_list">敬请等待上线</string>
    <string name="empty_user_issue">您没有订阅包</string>
    <string name="empty_daily_reminder">暂时没有任务</string>
    
    <string name="user_issue_success">订阅成功</string>
    
    <!-- exam -->
    <string name="ex_continue">继续</string>
    <string name="ex_do_again">重新答题</string>
    <string name="ex_next">下一题</string>
    <string name="ex_commit">提交答卷</string>
    <string name="ex_report">测试报告</string>
    <string name="ex_report_score">你的得分</string>
    <string name="ex_report_time">测试日期：%s</string>
    <string name="ex_report_conclusion">测试结果</string>
    <string name="ex_step">STEP: \0</string>
    <string name="ex_number">%1$s、%2$s</string>
    <string name="ex_exit">您确定要退出本次测试吗？</string>
    <string name="ex_max_choices">本题最多只能选%s个</string>
    <string name="ex_not_answered">您还没有答题！</string>

</resources>