<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray" 
    android:padding="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/feedback_title" 
        android:layout_marginBottom="20dp"/>
    
    <TextView style="@style/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_type"/>
    <Spinner 
        android:id="@+id/type_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
    
    <TextView style="@style/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_content"/>
    
    <EditText 
        android:id="@+id/content_edit"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:background="@android:drawable/editbox_background_normal"
        android:gravity="top|left"/>
    
   <TextView style="@style/text_black"
       android:id="@+id/btn"
       
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_blue"
        android:gravity="center_horizontal"
        android:text="@string/feedback_confirm"/></LinearLayout>